@@ -1,3 +1,7 @@
+2011-06-02  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/edge/actions.jl: added before-edge-action-hook and
+	after-edge-action-hook
+
 2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/actions.jl: don't exec any edge-action, while
 	mousetrapping is active (new feature in misc-1.9 branch)
